--- a/Info.html
+++ b/Info.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/x-icon" href="img/1570779.jpg">
+    <link rel="icon" type="image/x-icon" href="img/St22.jpg">
     <title>Разработка сайтов и мобильных приложений</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <img src="img/1570779.png" alt="photo">
+        <img src="img/St21p.png" alt="photo">
         <a href="index.html">О компании</a>
         <a href="service.html">Услуги</a>
         <a href="Info.html">Информация</a>
@@ -56,7 +56,7 @@
 
     <footer>
         Разработка сайтов и мобильных приложений
-        <a class="fancybox" rel="gallery" href=""><img src="img/1570779.png" alt="photo"></a>
+        <a class="fancybox" rel="gallery" href=""><img src="img/St22.png" alt="photo"></a>
         <img src="img/QR.png" alt="photo">
         <div>
            <a href="tel:+995-551-556-224">+995-551-556-224</a><br>
