add portfolio files

--- a/Info.html
+++ b/Info.html
@@ -37,7 +37,7 @@
         <div class="col50" style="display:flex; width: auto; height: auto; text-align: center;">
             <div style="min-width: 100%">
                 <div style="text-align: center;">
-                   <iframe width="550" height="340" src="" title="Разработка сайтов и мобильных приложений" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                   <img width="550" height="340" src="img/allconstr.jpg" title="Разработка сайтов и мобильных приложений" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
         <div class="col50" style="display:flex; width: auto; height: auto; text-align: center;">
             <div style="min-width: 100%">
                 <div style="text-align: center;">
-                   <iframe width="550" height="340" src="" title="Разработка сайтов и мобильных приложений" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                   <img width="550" height="340" src="img/account1.jpg" title="Разработка сайтов и мобильных приложений" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </div>
             </div>
         </div>
