add script test sr

--- a/service.html
+++ b/service.html
@@ -36,6 +36,8 @@
            - Flutter и Blockchain.<br><br>
 
            Нам нравится работать в масштабируемых облачных средах, таких как AWS.
+           <br><br>
+           <a href="https://paveln7581508.github.io/testserver/testsr.html" target="_blank">Также вы можете пробовать тестирование на нашем сайте</a>
            <br>
         </p>
     </main>
