--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <a href="https://paveln7581508.github.io/webstudio.github.io/Info.html"><img src="img/St21p.png" alt="photo"></a>
+        <a href="https://paveln7581508.github.io/webstudio.github.io/index.html"><img src="img/St21p.png" alt="photo"></a>
         <a href="index.html">О компании</a>
         <a href="service.html">Услуги</a>
         <a href="Info.html">Портфолио</a>
