new block testers

--- a/service.html
+++ b/service.html
@@ -60,6 +60,25 @@
         </div>
 
     </h2>
+    
+    <!-- Видео 2 -->
+
+    <h2>
+        <div class="col50" style="display:flex; text-align: left; justify-content: center; font-size: 18px;">
+            <div class="tab">Тестирование на нашем сайте<br><br>
+
+                <br>
+                </div>
+        </div>
+        <div class="col50" style="display:flex; width: auto; height: auto; text-align: center;">
+            <div style="min-width: 100%">
+                <div style="text-align: center;">
+                   <iframe width="550" height="340" src="" title="Разработка сайтов и мобильных приложений" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+
+    </h2>
 
     <main>
 
