--- a/Info.html
+++ b/Info.html
@@ -63,6 +63,25 @@
 
     </h2>
 
+    <!-- Видео 3 -->
+
+    <h2>
+        <div class="col50" style="display:flex; text-align: left; justify-content: center; font-size: 18px;">
+            <div class="tab">for security company<br><br>
+
+                <br>
+                </div>
+        </div>
+        <div class="col50" style="display:flex; width: auto; height: auto; text-align: center;">
+            <div style="min-width: 100%">
+                <div style="text-align: center;">
+                   <img width="550" height="340" src="img/RPS.jpg" title="Разработка сайтов и мобильных приложений" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                </div>
+            </div>
+        </div>
+
+    </h2>
+
 
     <main>
 
