--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://paveln7581508.github.io/webstudio.github.io/index.html"><img src="img/St21p.png" alt="photo"></a>
         <a href="index.html">О компании</a>
         <a href="service.html">Услуги</a>
-        <a href="Info.html">Портфолио</a>
+        <a href="info.html">Портфолио</a>
         <div>
             <a href="tel:+995-551-556-224">+995-551-556-224</a><br>
             <a href="mailto: hat7581508@gmail.com"> hat7581508@gmail.com</a>
