Update testsr_en.html- translate lang

--- a/testsr_en.html
+++ b/testsr_en.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="img/St22.jpg">
-    <title>Тестирование сайтов и мобильных приложений</title>
+    <title>Testing of websites and mobile applications</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
-        <a href="https://paveln7581508.github.io/webstudio.github.io/index.html"><img src="img/St21p.png" alt="photo"></a>
+        <a href="https://paveln7581508.github.io/webstudio.github.io/index_en.html"><img src="img/St21p.png" alt="photo"></a>
 
         <div>
             <a href="mailto: hat7581508@gmail.com"> hat7581508@gmail.com</a>
@@ -38,7 +38,7 @@
         </form>
 
         <p>
-        В разработке
+        In development
         </p>
     </main>
 
@@ -51,7 +51,7 @@
     </main>
 
     <footer>
-        Тестирование сайтов и мобильных приложений
+        Testing of websites and mobile applications
         <a class="fancybox" rel="gallery" href=""><img src="img/St22.png" alt="photo"></a>
         <img src="img/QR.png" alt="photo">
         <div>
