Update service_en.html - link tester en

--- a/service_en.html
+++ b/service_en.html
@@ -50,7 +50,7 @@
 
             We like to work in scalable cloud environments such as AWS.
            <br><br>
-           <a href="https://paveln7581508.github.io/testserver/testsr.html" target="_blank">You can also try testing on our website</a>
+           <a href="https://paveln7581508.github.io/testserver/testsr_en.html" target="_blank">You can also try testing on our website</a>
            <br>
         </p>
     </main>
